# dataset-dynamic-cropper

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataset-dynamic-cropper/: BoundingBoxes.py  DynamicCropper.py  YoloDatasetGrabber.py  __main__ OLD.py  __main__.py
dataset-dynamic-cropper/api/: DynamicCropperAPI.py
dataset-dynamic-cropper/classes/: BoundingBoxes.py  Cropper.py  YoloDatasetGrabber.py
dataset_dynamic_cropper/: DynamicCropper.py  main.py
dataset_dynamic_cropper/api/: DynamicCropperAPI.py
dataset_dynamic_cropper/classes/: Cropper.py  YoloDatasetGrabber.py
dsdyncrop/: BoundingBoxes.py  Cropper.py  DynamicCropper.py  YoloDatasetGrabber.py  __init__.py  __main__.py
dynamic_cropper/: main.py
dynamic_cropper/api/: DynamicCropperAPI.py
dynamic_cropper/classes/: YoloDatasetGrabber.py
samples/: GOPR2318_00950.txt  GOPR2318_00951.txt  GOPR2318_00952.txt  GOPR2318_00953.txt  GOPR2318_00954.txt  GOPR2318_00955.txt  GOPR2318_00956.txt  GOPR2318_00957.txt  GOPR2318_00958.txt  GOPR2318_00959.txt
