
[project]
name = "dataset-dynamic-cropper"
version = "1.0.0"
description = "Dynamically crops all images in a dataset."
authors = [
    {name = "Spaicrab", email = "giuliodf2005@gmail.com"},
]
dependencies = [
    "argparse",
    "imagesize",
    "opencv-python",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
cropper = "dsdyncrop.__main__:main"